k8s/03-django-deployment.yml
# k8s/03-django-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-api
  template:
    metadata:
      labels:
        app: django-api
    spec:
      containers:
        - name: django-api-container
          image: your-registry/job-board-api:latest # <--
          ports:
            - containerPort: 8000
          command: ["sh", "-c", "python manage.py migrate && gunicorn --bind 0.0.0.0:8000 job_board_project.wsgi:application"]
