k8s/06-ingress.yml
# k8s/06-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: job-board-ingress
  annotations:
    #
spec:
  rules:
    - host: "api.yourdomain.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-deployment-service
                port:
                  number: 80
  tls:
    - hosts:
        - "api.yourdomain.com"
      secretName: yourdomain-tls
